--- a/Bombones2025TP03.Servicios/Bombones2025TP03.Servicios.csproj
+++ b/Bombones2025TP03.Servicios/Bombones2025TP03.Servicios.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bombones2025TP03.DatosSql\Bombones2025TP03.DatosSql.csproj" />
+  </ItemGroup>
+
 </Project>
