--- a/Bombones2025TP03.DatosSql/Bombones2025TP03.DatosSql.csproj
+++ b/Bombones2025TP03.DatosSql/Bombones2025TP03.DatosSql.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bombones2025TP03.Entidades\Bombones2025TP03.Entidades.csproj" />
+  </ItemGroup>
+
 </Project>
